src/testFunctional/testData/org/intellij/xquery/annotator/comment/MisplacedComment.xq
<a <error descr="Comments cannot be used here.">(: a (: b :) c :)</error>/>